Mark as compatible with Python 2 and 3.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,17 +1,22 @@
 [buildout]
-extends = https://raw.githubusercontent.com/zopefoundation/Zope/master/versions.cfg
-
+extends =
+    https://raw.githubusercontent.com/zopefoundation/Zope/master/versions.cfg
 develop = .
-parts = interpreter test
+parts =
+    interpreter
+    test
 
 [versions]
 Products.OFSP =
 
 [interpreter]
 recipe = zc.recipe.egg
-interpreter = python
-eggs = Products.OFSP
+interpreter = py
+eggs =
+    Products.OFSP
+    tox
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = Products.OFSP
+eggs =
+    Products.OFSP
