--- a/setup.cfg
+++ b/setup.cfg
@@ -4,5 +4,11 @@ ignore =
     bootstrap.py
 
 [flake8]
-ignore = N801,N802,N803,N805,N806,N812,E301
+ignore =
 exclude = bootstrap.py
+
+[bdist_wheel]
+universal = 1
+
+[zest.releaser]
+create-wheel = yes
