--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
-
+dist: xenial
 python:
     - 2.7
     - 3.5
     - 3.6
 
 install:
-    - pip install -U setuptools==33.1.1
+    - pip install -U setuptools
     - pip install zc.buildout
     - buildout bootstrap
     - buildout
